--- a/styles/main.css
+++ b/styles/main.css
@@ -471,3 +471,134 @@ body {
   -webkit-font-feature-settings: 'liga';
   -webkit-font-smoothing: antialiased;
 }
+
+/* CogCanvas Toolbar Logo */
+#ccLogo {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 10%;
+    height: auto;
+    padding-top: 20px;
+}
+
+#helpButton {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 5%;
+    height: auto;
+    padding-top: 20px;
+}
+
+/* Toolbar tabs */
+
+.tab {
+    overflow: hidden;
+}
+
+/* Change background color of buttons on hover */
+.tab button:hover {
+    background-color: #ddd;
+}
+
+/* Create an active/current tablink class */
+.tab button.active {
+    background-color: #ccc;
+}
+
+/* Style the tab content */
+.tabcontent {
+    padding: 6px 12px;
+}
+
+/* Toolbar sections */
+
+.toolbar {
+    background-color: #5CB8E0;
+    border: none;
+    border-radius: 5px;
+    color: white;
+    padding: 0px;
+    text-align: center;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    box-shadow: 0 1px 2px 0 rgba(0,0,0,0.2),0 2px 10px 0 rgba(0,0,0,0.19);
+}
+
+#toolButton, #noteButton, #resourceButton {
+    display: inline-block;
+    width: auto;
+    padding: 5px;
+    text-align: center;
+    padding-bottom: 25px;
+}
+
+#noteSection, #resourceSection {
+    display: none;
+}
+
+/* The Modal (background) */
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+/* Modal Header */
+.modal-header {
+    padding: 2px 16px;
+    background-color: #5CB8E0;
+    color: white;
+}
+
+/* Modal Body */
+.modal-body {
+    padding: 16px;
+}
+
+/* Modal Footer */
+.modal-footer {
+    padding: 4px 16px;
+    background-color: #5CB8E0;
+    color: white;
+}
+
+/* Modal Content */
+.modal-content {
+    position: relative;
+    background-color: #fefefe;
+    margin: auto;
+    padding: 0;
+    border: 1px solid #888;
+    width: 80%;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
+    animation-name: animatetop;
+    animation-duration: 0.4s
+}
+
+/* Add Animation */
+@keyframes animatetop {
+    from {top: -300px; opacity: 0}
+    to {top: 0; opacity: 1}
+}
+
+/* The Close Button */
+.close {
+    color: black;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+#closeButton {
+    background-color: #1383DD;
+}
